# string-diagrams

./: .gitattributes  .gitignore  CodeMeta.json  Makefile  README  bifunc.sd  default.nix  default.sd  dune-project  exchange.sd  frog.sd  monad.sd  mueta.sd  mueta.sdp  mumu.sd  mumu.sdp  mumumu.sd  mumumu.sdp  one.sd  one.sdp  string-diagrams.opam  thanks.sd  unicode.sd
ide/emacs/: sd-mode.el  sd-pg-manager.el  sd-proof-manager.el
lib/: arena.ml  canvas.ml  constants.ml  constants.mli  dune  editor.ml  editor.mli  element.ml  element.mli  env.ml  env.mli  examples.ml  examples.mli  file.ml  file.mli  gArena.ml  gArena.mli  gTerm.ml  gTerm.mli  gUI.ml  gUI.mli  geometry.ml  geometry.mli  graph.ml  graph.mli  graph_type.mli  history.ml  history.mli  info.ml  info.mli  lexer.mll  locate.ml  locate.mli  mSet.ml  mSet.mli  messages.ml  messages.mli  misc.ml  misc.mli  pad.ml  (+19 more)
test/: dune  sanity.ml
www/: applet.ml  dune  hg.ml  hip.css  index.html
