(library
 (name diagrams)
 (libraries vg unix store)
 (modules_without_implementation types graph_type)
; (flags -w -27)
 (modules :standard \ gArena file))

(menhir (modules parser))
(ocamllex lexer)

(library
 (name diagrams_cairo)
 (libraries diagrams vg.cairo)
 (modules file))

(library
 (name diagrams_gtk)
 (libraries diagrams_cairo cairo2-gtk)
 (modules gArena))
